--- a/client/bower.json
+++ b/client/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "MinesWeeper-kata-client",
+  "name": "MinesWeeper",
   "version": "0.0.1",
   "dependencies": {
     "angular": "1.3.0",
